--- a/CCSBI/templates/base.html
+++ b/CCSBI/templates/base.html
@@ -1,6 +1,13 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <!-- Bootstrap Font Icon CSS -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+<style>
+  .navbar {
+
+    width: 100%;
+    margin-left: -1%;
+  }
+</style>
 {% load static %}
 <!DOCTYPE html>
 <html>
@@ -13,10 +20,11 @@
 
         
       </div>
-      <div class="container">
-        <img src="{% static '/images/headerimg1.svg' %}"   alt="...">
-        <nav class="navbar navbar-expand-lg navbar-light bg-white">
-            <div class="container-fluid">
+
+      <div class="container-fluid">
+        
+        <nav class="navbar fixed-top navbar-expand-lg  navbar-dark bg-dark" style="background: linear-gradient(to right, rgb(27,63,96) , rgb(12,97,125));">
+            <div class="container-fluid" style="width: 130%; padding: 0px;">
               <button
                 class="navbar-toggler navbar-toggler-right"
                 type="button"
@@ -28,8 +36,14 @@
               >
                 <i class="navbar-toggler-icon"></i>
               </button>
-              <div class="collapse navbar-collapse" id="navbarExample01">
+              <div class="collapse navbar-collapse" id="navbarExample01" style="margin-left: 25%;">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  
+
+                 
+
+                  <img src="{% static '/images/logofinal.jpg' %}"  width="11%"  style="margin-left: -5%;"   alt="...">
+                
                   <li class="nav-item active">
                     <a class="nav-link" aria-current="page" href="/home">Home</a>
                   </li>
@@ -57,6 +71,7 @@
                   <li class="nav-item">
                     <a class="nav-link" href="/contact">Contact</a>
                   </li>
+
 
                       
                 </ul>
