--- a/CcsbiProject/templates/Capacity.html
+++ b/CcsbiProject/templates/Capacity.html
@@ -2,4 +2,76 @@
 {% load static %}
 
 {% block content %}
+<br>
+<br>
+<br>
+<br>
+<div class="container">
+    <h2><b> Capacity building programmes for citizen scientists </b></h2>
+    <hr  color="red" style="margin-left:0px; height: 5px;width:15%;">
+    <br>
+    <div class="row">
+        <div class="col-sm-4" >
+            <img src="{% static '/images/academic research.svg' %}" padding-left:25%  width="100%"    alt="...">
+        </div>
+        
+        <div class="col-sm-8" >
+            <br>
+            <h2 >
+                <b>Basics of Citizen science </b>
+
+            </h2>
+            <p class="text-justify">
+                This training programme will cover the basics of citizen science: the Importance of citizen science, data collection platforms, types of projects, 
+                project design, project management, effective outreach methods, Do’s and Don'ts, basic data collection methods, softwares and open access data sources etc. 
+            </p>
+
+        </div>
+
+    </div>
+    <br>
+    <div class="row">
+        <div class="col-sm-8" >
+            <h2 >
+                <b>Taxonomy Workshops </b>
+
+            </h2>
+            <p class="text-justify">
+                Species identification workshops will be conducted through this programme. It will focus on identifying the uploaded observations on public repositories like iNaturalist. 
+            </p>
+
+        </div>
+        
+        <div class="col-sm-4" >
+            <img src="{% static '/images/pollinator_count.svg' %}" padding-left:25%  width="100%"    alt="...">
+
+        </div>
+
+    </div>
+
+    <br>
+    <div class="row">
+        <div class="col-sm-4" >
+            <img src="{% static '/images/public_library.jpg' %}" padding-left:25%  width="100%"    alt="...">
+        </div>
+        
+        <div class="col-sm-8" >
+            <br>
+            <h2 >
+                <b>Data management, analysis and visualisation</b>
+
+            </h2>
+            <p class="text-justify">
+                If we are unable to interpret the data, all the effort we put into data collection will be in vain. So before designing a project you should have a clear idea of 
+                what kind of data you should be collecting, how it should be managed, what kind of output you are expecting and
+                 what analysis should be carried out to interpret the data. This session will be covering the basics of biostatistics and introduction to softwares. 
+            </p>
+
+        </div>
+
+    </div>
+
+
+</div>
+
 {% endblock content %}
