--- a/CcsbiProject/templates/Events.html
+++ b/CcsbiProject/templates/Events.html
@@ -2,4 +2,78 @@
 {% load static %}
 
 {% block content %}
+<br>
+<br>
+<br>
+<br>
+<div class="container">
+    <div class="row">
+        <div class="col-md-7" style="padding: 0px;">
+            
+            <div class="card text-center "  style="background-color: rgb(3,122,146);">
+                <div class="card-body" style="height: 300px;">
+                    <h3>50 +    </h3>
+                    <h3>Institutions</h3>
+                    <p>Actively participating in 
+    
+                        this citizen Science 
+                        
+                        Intitiative</p>
+                    
+                </div>   
+            </div>
+        </div>
+        <div class="col-md-5" style="padding: 0px;">
+            
+            <div class="card text-center "   style="background-color: rgb(28,58,92);">
+                <div class="card-body" style="height: 300px;">
+                    <h3>50 +    </h3>
+                    <h3>Institutions</h3>
+                    <p>Actively participating in 
+    
+                        this citizen Science 
+                        
+                        Intitiative</p>
+                    
+                </div>   
+            </div>
+    
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-4" style="padding: 0px;">
+            <div class="card text-center"  style="background-color: rgb(30,92,104);" >
+                <div class="card-body" style="height: 300px;">
+                    <h3>50 +    </h3>
+                    <h3>Institutions</h3>
+                    <p>Actively participating in 
+    
+                        this citizen Science 
+                        
+                        Intitiative</p>
+                    
+                </div>   
+            </div>
+    
+        </div>
+        
+        <div class="col-md-8" style="padding: 0px;">
+            
+            <div class="card text-center "  style="background-color: rgb(237,168,18);">
+                <div class="card-body" style="height: 300px;">
+                    <h3>50 +    </h3>
+                    <h3>Institutions</h3>
+                    <p>Actively participating in 
+    
+                        this citizen Science 
+                        
+                        Intitiative</p>
+                    
+                </div>   
+            </div>
+    
+        </div>
+    </div>
+    
+</div>
 {% endblock content %}
