--- a/CcsbiProject/templates/index.html
+++ b/CcsbiProject/templates/index.html
@@ -1,4 +1,6 @@
-
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <!-- Bootstrap Font Icon CSS -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 <style>
 
 
@@ -86,17 +88,75 @@
       z-index: 0;
       transition: transform 0.3s ease-out;
     }
-    </style>
-{% extends "base.html" %}
 
+  .navbar {
+
+    width: 100%;
+    margin-left: -1%;
+  }
+</style>
 {% load static %}
 
 {% block content %}
 <div class="container">
-    <div >
+    <img id="img" src="{% static '/images/headerimg1.svg' %}" style="margin-left: 5%;"  alt="...">
 
-        <img src="{% static '/images/Home1.jpeg' %}" width="100%"   alt="...">
-    </div>
+</div>
+<div  class="container-fluid">
+    <nav class="navbar fixed navbar-expand-lg  navbar-dark bg-dark" style="background: linear-gradient(to right, rgb(27,63,96) , rgb(12,97,125));">
+        <div class="container-fluid" style="width: 130%; padding: 0px;">
+          <button
+            class="navbar-toggler navbar-toggler-right"
+            type="button"
+            data-toggle="collapse"
+            data-target="#navbarExample01"
+            aria-controls="navbarResponsive"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <i class="navbar-toggler-icon"></i>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarExample01" style="margin-left: 25%;">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              
+              <li class="nav-item active">
+                <a class="nav-link" aria-current="page" href="/home">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/projects">Citsci Projects</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/Networks">Citsci Networks</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/Datasets">Data Sets</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/Resources">Resources </a>
+              </li>                  
+              <li class="nav-item">
+                <a class="nav-link" href="/Capacity">Capacity Building</a>
+              </li>                    
+              <li class="nav-item">
+                <a class="nav-link" href="/Events">Events</a>
+              </li>                  
+              <li class="nav-item">
+                <a class="nav-link" href="/Opportunities">Opportunities</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/contact">Contact</a>
+              </li>
+
+                  
+            </ul>
+          </div>
+        </div>
+      </nav>
+</div>
+<div class="container">
+
+
+    <img src="{% static '/images/Home1.jpeg' %}" width="100%"   alt="...">
     <p class="text-center"><b>Curiosity fuels motivation to explore and learn. Our own backyard is the best place to start! Are you curious? Want to explore and learn?
     
         You are at the right place!<span style="color: purple;" > The Centre for Citizen Science and Biodiversity Informatics</span> will guide you to be a citizen scientist! </b></p>
@@ -124,16 +184,11 @@
     </div>
     <div class="row">
         <div class="col-md-6" >
-            <img src="{% static '/images/home3.jpg' %}" padding-left:25%  width="150%"    alt="...">
+            <img src="{% static '/images/home3.jpg' %}" padding-left:25%  width="100%"  style="margin-top: -12%;"   alt="...">
         </div>
         <div class="col-md-6" >  
-            <br/>
-            <br/>    
-            <br/>
-            <br/>  
-            <br/>
-            <br/>    
-            <br/>
+
+
             <br/>    
             <br/>
             <br/>  
@@ -153,19 +208,16 @@
 
     <div>
         <h2><b>Our specific objectives are: </b></h2>
-        <br>
+
         <div class="row">
             
-            <div class="col-md-5" >
-                <img src="{% static '/images/Objectives.png' %}"  width="100%" height="80%"    alt="...">
-            </div>
+
             
         
-            <div class="col-md-7" >
+            <div  >
 
 
-        <br>
-        <br>       
+       
         <ul >
             <li>
                 Coordinate and co-develop citizen science programmes in critical areas,
@@ -278,10 +330,63 @@
         </div>
     </div>
     
-
-
-
 </div>
+<br>
+<b><hr ></b>
+<footer class="page-footer font-small ">
+  <div class="container">
+    <div class="row">
+    
+      <div class="col-sm-3" >
+        <h2><b>Get In Touch</b></h2>
+        <b><hr  color="red" style="margin-left:0px; height: 2%;width:45%;"></b>
+        
+        
+        <a href="mailto:citsci@kfri.res.in" style="color: black;"><i class="bi bi-envelope" ></i> citsci@kfri.res.in </a>, <a href="mailto:ccsbi@kfri.res.in" style="color: black;">ccsbi@kfri.res.in </a> 
+        <br>
+
+        <span><a href="tel: 04872690272" style="color: black;"><i class="bi bi-telephone"></i> 04872690272</a></span>
+        <br>
+        <span>
+          <a href="https://www.facebook.com/profile.php?id=100088452392023"><i class="bi bi-facebook"> </i></a>
+          &nbsp;
+          <a href="https://www.instagram.com/citsci_india/"><i class="bi bi-instagram"></i></a>
+          &nbsp;
+          <a href="https://www.youtube.com/channel/UCQOj_87QKImHsRJmUUrTsDg"><i class="bi bi-youtube"></i></a>
+          &nbsp;
+          
+        </span>
+
+      </div>
+      <div class="col-md-3" >
+          <img src="{% static '/images/LOGO.png' %}"  width="100%"    alt="...">
+      </div>
+      <div class="col-sm-3" >
+        <img src="{% static '/images/logopng.png' %}"  width="80%"    alt="...">
+      </div>
+
+      <div class="col-sm-3" >
+        
+        <span>Centre for Citizen Science &
+
+          Biodiversity Informatics,
+        </span><br><span>
+          
+          Kerala Forest Research Institute
+          
+          Peechi P.O,  Pin- 680653
+        </span><br><span>
+          Thrissur , Kerala, India.
+
+        
+      </div>
+    </div>
+    <br>
 
 
+
+  </div>
+  
+
+</footer>
 {% endblock content %}
