rearrage the work

--- a/CCSBI/templates/base.html
+++ b/CCSBI/templates/base.html
@@ -7,6 +7,7 @@
     width: 100%;
     margin-left: -1%;
   }
+  
 </style>
 {% load static %}
 <!DOCTYPE html>
@@ -42,7 +43,8 @@
 
                  
 
-                  <img src="{% static '/images/logofinal.jpg' %}"  width="11%"  style="margin-left: -5%;"   alt="...">
+                  <!--!-->
+                  <img src="{% static '/images/CCSBI logo 2.png' %}"  width="11%"  style="margin-left: -5%;"   alt="...">
                 
                   <li class="nav-item active">
                     <a class="nav-link" aria-current="page" href="/home">Home</a>
@@ -53,9 +55,9 @@
                   <li class="nav-item">
                     <a class="nav-link" href="/Networks">Citsci Networks</a>
                   </li>
-                  <li class="nav-item">
+                 <!--  <li class="nav-item">
                     <a class="nav-link" href="/Datasets">Data Sets</a>
-                  </li>
+                  </li>!-->
                   <li class="nav-item">
                     <a class="nav-link" href="/Resources">Resources </a>
                   </li>                  
