--- a/CcsbiProject/templates/Capacity.html
+++ b/CcsbiProject/templates/Capacity.html
@@ -4,9 +4,12 @@
 {% block content %}
 <br>
 <br>
-<br>
-<br>
+
 <div class="container">
+    <img src="{% static '/images/capacitybuilding.png' %}" padding-left:25%  width="100%"    alt="...">
+    
+<br>
+<br>
     <h2><b> Capacity building programmes for citizen scientists </b></h2>
     <hr  color="red" style="margin-left:0px; height: 5px;width:15%;">
     <br>
