--- a/CcsbiProject/templates/Networks.html
+++ b/CcsbiProject/templates/Networks.html
@@ -17,46 +17,6 @@
     <div class="row">
         <div class="col-sm-8" >
             <h2 >
-                <b>NGOs </b>
-
-            </h2>
-            <p class="text-justify">
-                Non governmental organisations have always been on the frontiers of wildlife conservation. Citizen science is an opportunity for them to contribute more to science and nature conservation. NGOs can work with local communities on biodiversity-related issues through citizen science, with the necessary training and guidance by CCSBI. This will help in converting indigenous knowledge about species distributions into digital and publicly accessible format, at the same time this will help in generating conservation attitudes within the stakeholder communities. NGOs can collaborate with CCSBI for organising biodiversity surveys and associated workshops.
-            </p>
-
-        </div>
-        
-        <div class="col-sm-4" >
-            <img src="{% static '/images/ngo.jpg' %}" padding-left:25%  width="100%"    alt="...">
-
-        </div>
-
-    </div>
-
-    <br>
-    <div class="row">
-        <div class="col-sm-4" >
-            <img src="{% static '/images/academic research.svg' %}" padding-left:25%  width="100%"    alt="...">
-        </div>
-        
-        <div class="col-sm-8" >
-            <br>
-            <h2 >
-                <b>Academic/research institutes </b>
-
-            </h2>
-            <p class="text-justify">
-                Academic/research institutions can contribute to citizen science in many ways, starting from assessing their campus biodiversity to planning and executing bioblitz-like events anywhere with the help of CCSBI. 
-                Being a part of this network will be beneficial for its students and faculties as they can take part in workshops, training programmes and events conducted by CCSBI. 
-            </p>
-
-        </div>
-
-    </div>
-    <br>
-    <div class="row">
-        <div class="col-sm-8" >
-            <h2 >
                 <b>Citizen Science Clubs </b>
 
             </h2>
@@ -71,6 +31,47 @@
         
         <div class="col-sm-4" >
             <img src="{% static '/images/pollinator_count.svg' %}" padding-left:25%  width="100%"    alt="...">
+
+        </div>
+
+    </div>
+
+
+    <br>
+    <div class="row">
+        <div class="col-sm-4" >
+            <img src="{% static '/images/academic research.svg' %}" padding-left:25%  width="100%"    alt="...">
+        </div>
+        
+        <div class="col-sm-8" >
+            <br>
+            <h2 >
+                <b>Academic/Research institutes </b>
+
+            </h2>
+            <p class="text-justify">
+                Academic/research institutions can contribute to citizen science in many ways, starting from assessing their campus biodiversity to planning and executing bioblitz-like events anywhere with the help of CCSBI. 
+                Being a part of this network will be beneficial for its students and faculties as they can take part in workshops, training programmes and events conducted by CCSBI. 
+            </p>
+
+        </div>
+
+    </div>
+    <br>
+    <div class="row">
+        <div class="col-sm-8" >
+            <h2 >
+                <b>NGOs </b>
+
+            </h2>
+            <p class="text-justify">
+                Non governmental organisations have always been on the frontiers of wildlife conservation. Citizen science is an opportunity for them to contribute more to science and nature conservation. NGOs can work with local communities on biodiversity-related issues through citizen science, with the necessary training and guidance by CCSBI. This will help in converting indigenous knowledge about species distributions into digital and publicly accessible format, at the same time this will help in generating conservation attitudes within the stakeholder communities. NGOs can collaborate with CCSBI for organising biodiversity surveys and associated workshops.
+            </p>
+
+        </div>
+        
+        <div class="col-sm-4" >
+            <img src="{% static '/images/ngo.jpg' %}" padding-left:25%  width="100%"    alt="...">
 
         </div>
 
