--- a/CcsbiProject/templates/index.html
+++ b/CcsbiProject/templates/index.html
@@ -8,20 +8,22 @@
       --bg-color: #ffd861;
       --bg-color-light: #ffeeba;
       --text-color-hover: #4C5656;
-      --box-shadow-color: rgba(255, 215, 97, 0.48);
+      --box-shadow-color: rgba(10, 43, 233, 0.281);
+      
+      
     }
     .volunteer{
       --bg-color: #ffd861;
       --bg-color-light: #92f1c2;
       --text-color-hover: #4C5656;
-      --box-shadow-color: rgba(64, 243, 10, 0.651);
+      --box-shadow-color: rgba(10, 43, 233, 0.281);
     }
 
     .dataset{
       --bg-color: #ffd861;
       --bg-color-light: #92f1c2;
       --text-color-hover: #4C5656;
-      --box-shadow-color: rgb(247, 152, 152);
+      --box-shadow-color: rgba(10, 43, 233, 0.281);
     }
     .institue{
       --bg-color: #ffd861;
@@ -207,7 +209,7 @@
     </p>
 
     <div>
-        <h2><b>Our specific objectives are: </b></h2>
+        <h2>Objectives: </h2>
 
         <div class="row">
             
