--- a/CCSBI/templates/base.html
+++ b/CCSBI/templates/base.html
@@ -38,7 +38,7 @@
                 <i class="navbar-toggler-icon"></i>
               </button>
               <div class="collapse navbar-collapse" id="navbarExample01" style="margin-left: 25%;">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0" style="font-size: 22px;">
                   
 
                  
